# mpi_assignment_2

./: CMakeLists.txt  Makefile
include/: myutils.h
src/: main.c  menu.c
